@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-01-16T08:08:36Z",
-  "count_outdated" : 219,
-  "uniques_outdated" : 154,
+  "timestamp" : "2024-01-21T08:07:28Z",
+  "count_outdated" : 222,
+  "uniques_outdated" : 157,
   "count" : 228,
   "uniques" : 163,
   "clones" : [
-    {
-      "timestamp": "2024-01-07T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 3,
-      "uniques_minmax": [ 3, 3 ],
-      "uniques_decinc": [ 0, 3 ]
-    },
     {
       "timestamp": "2024-01-08T00:00:00Z",
       "count": 1,
